2007-11-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc.el (vc-diff-internal): Pop-to-buffer later.

	* subr.el (event-modifiers): Use internal-event-symbol-parse-modifiers.

	* pcvs.el (cvs-revert-if-needed): Ignore `unknown' files, since cvs
	did not touch them.

2007-11-15  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-menu.el: New file.
	* calc/calc.el (calc-mode): Require calc-menu.

2007-11-14  Juanma Barranquero  <lekktu@gmail.com>

	* isearch-multi.el (isearch-buffers-next-buffer-function): Doc fix.

2007-11-14  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-parent-bptno-enabled): New variable.
	(gdb-breakpoint-regexp, gdb-mouse-toggle-breakpoint-margin)
	(gdb-mouse-toggle-breakpoint-fringe, gdb-delete-breakpoint)
	(gdb-goto-breakpoint): Generalise for breakpoints with multiple
	locations.
	(gdb-info-breakpoints-custom, gdb-assembler-custom)
	(gdb-toggle-breakpoint): Update for new gdb-breakpoint-regexp.
	(gdb-put-breakpoint-icon): Only display icon for parent breakpoint.

2007-11-13  Noah Friedman  <friedman@splode.com>

	* calc/calc.el: Add `backward-delete-char-untabify' to the list of
	bindings to remap when `calc-scan-for-dels' is non-nil.

2007-11-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/byte-opt.el (byte-compile-trueconstp): Handle more
	constant forms.
	(byte-compile-nilconstp): New function.
	(byte-optimize-cond): Kill subsequent branches when a branch is
	know to be taken or not taken.
	(byte-optimize-if): Use byte-compile-nilconstp instead of hand coding.

2007-11-13  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-register): Allow registering a file passed as a
	parameter instead of just the current buffer.

2007-11-12  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-open-connection-setup-interactive-shell):
	Check whether the output of "uname -sr" has been changed.

2007-11-12  Vinicius Jose Latorre  <viniciusjl@ig.com.br>
